--- a/tensorboard/plugins/graph/tf_graph_controls/tf-graph-controls.html
+++ b/tensorboard/plugins/graph/tf_graph_controls/tf-graph-controls.html
@@ -421,7 +421,7 @@ paper-dropdown-menu {
 
       <paper-radio-button name="device">Device</paper-radio-button>
 
-      <paper-radio-button id="xla-cluster-radio-button"
+      <!--<paper-radio-button id="xla-cluster-radio-button"
                           name="xla_cluster"
                           disabled="[[!_xlaClustersProvided(renderHierarchy)]]">
         XLA Cluster
@@ -448,14 +448,14 @@ paper-dropdown-menu {
       <paper-tooltip animation-delay="0" for="memory-radio-button" position="right" offset="0">
         Coloring by memory is only enabled if the RunMetadata proto is passed to the
         FileWriter when a specific session is run.
-      </paper-tooltip>
+      </paper-tooltip> -->
 
-      <paper-radio-button id="tpu-compatibility-radio-button"
+      <paper-radio-button id="nnp-compatibility-radio-button"
                           name="op_compatibility">
-        TPU Compatibility
+        NNP Compatibility
       </paper-radio-button>
-      <paper-tooltip animation-delay="0" for="tpu-compatibility-radio-button" position="right" offset="0">
-        Coloring by whether an operation is compatible for the TPU device.
+      <paper-tooltip animation-delay="0" for="nnp-compatibility-radio-button" position="right" offset="0">
+        Coloring by whether an operation is compatible for the NNP device.
       </paper-tooltip>
 
     </paper-radio-group>
