--- a/tensorboard/plugins/histogram/tf_histogram_dashboard/tf-histogram-loader.html
+++ b/tensorboard/plugins/histogram/tf_histogram_dashboard/tf-histogram-loader.html
@@ -118,11 +118,16 @@ limitations under the License.
           reflectToAttribute: true,  // for CSS
         },
 
-        requestManager: Object,
+        // requestManager: {
+        //   type: Object,
+        //   value: () => new tf_backend.requestManager(),
+        // },
+
         _canceller: {
           type: Object,
           value: () => new tf_backend.Canceller(),
         },
+        // memory_info: Array,
       },
 
       observers: ['reload(run, tag)'],
@@ -130,6 +135,21 @@ limitations under the License.
       _computeRunColor(run) {
         return this._colorScaleFunction(run);
       },
+
+      // var memory_info_url = tf_backend.addParams(tf.backend.getRouter().pluginRoute('histograms', '/memory'));
+      // this.requestManager.request(memory_info_url)
+      // .then(function(memory_info)) {
+      //   this.memory_info = memory_info;
+      // }
+
+      // memory_info() {
+      //   const memory_info_url = tf_backend.addParams(router.pluginRoute('histograms', '/memory_info'))
+      //   this.requestManager.request(memory_info_url)
+      //   .then(function(memory_info) {
+      //     this.memory_info = memory_info;
+      //     return tf.histogram.parser.
+      //   })
+      // },
 
       attached() {
         this._attached = true;
